# glimix-core

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  LICENSE  LICENSE.txt  MANIFEST.in  Pipfile  README.md  README.rst  _arr_liknorm.c  asv.conf.json  before-build-linux  conftest.py  interface.py  liknorm_build.py  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  ses  session.txt.py  setup-requirements.txt  setup.cfg  setup.py  speed.py  speed0.cprof  speed1.cprof  speed2.cprof  speed_1k.py  speed_2k.cprof  speed_2k.py  speed_2k_2.cprof  speed_2k_3.cprof  test-requirements.txt  test.py  test2.py
.asv/results/: benchmarks.json
.asv/results/hh-yoda-03-13.ebi.ac.uk/: 18a7fced-conda-py3.5-liknorm-ncephes-numba-numpy-numpy-sugar-pip-pip+liknorm-py-pip+optimix-scipy-scipy-sugar.json  35b59a00-conda-py3.5-liknorm-ncephes-numba-numpy-numpy-sugar-pip-pip+liknorm-py-pip+optimix-scipy-scipy-sugar.json  489a34e3-conda-py3.5-liknorm-ncephes-numba-numpy-numpy-sugar-pip-pip+liknorm-py-pip+optimix-scipy-scipy-sugar.json  49b7033f-conda-py3.5-liknorm-ncephes-numba-numpy-numpy-sugar-pip-pip+liknorm-py-pip+optimix-scipy-scipy-sugar.json  49b7033f-conda-py3.5-liknorm-numba-numpy-numpy-sugar-pip-pip+liknorm-py-pip+optimix-scipy.json  5ec0b6f1-conda-py3.5-liknorm-ncephes-numba-numpy-numpy-sugar-pip-pip+liknorm-py-pip+optimix-scipy-scipy-sugar.json  machine.json
.asv/results/reborn/: 213e69b3-conda-py3.6-numba-numpy-numpy-sugar-pip-scipy.json  298a007c-conda-py3.6-numba-numpy-numpy-sugar-pip-scipy.json  4ea83161-conda-py3.6-numba-numpy-numpy-sugar-pip-pip+optimix-scipy.json  dace9b94-conda-py3.6-numba-numpy-numpy-sugar-pip-pip+optimix-scipy.json  e6776b32-conda-py3.6-numba-numpy-numpy-sugar-pip-scipy.json  e6776b32-conda-py3.6-numba-numpy-pip-scipy.json  f438b948-conda-py3.6-numba-numpy-numpy-sugar-pip-scipy.json  fa216c42-conda-py3.6-numba-numpy-numpy-sugar-pip-scipy.json  machine.json
.github/workflows/: python-package.yml  release.yml  test.yml
benchmarks/: benchmarks.py
doc/: Makefile  advanced.rst  conf.py  cov.rst  environment.yml  ep.rst  ggp.rst  glmm.rst  gp.rst  index.rst  install.rst  lik.rst  limix_inference.cov.rst  limix_inference.glmm.rst  link.rst  lmm.rst  make.bat  mean.rst  random.rst  refs.bib  requirements.txt  zreferences.rst
doc/_autosummary/: glimix_core.cov.EyeCov.rst  glimix_core.cov.FreeFormCov.rst  glimix_core.cov.GivenCov.rst  glimix_core.cov.LinearCov.rst  glimix_core.cov.SumCov.rst  glimix_core.lik.BernoulliProdLik.rst  glimix_core.lik.BinomialProdLik.rst  glimix_core.lik.DeltaProdLik.rst  glimix_core.lik.PoissonProdLik.rst  glimix_core.link.IdentityLink.rst  glimix_core.link.LogLink.rst  glimix_core.link.LogitLink.rst  glimix_core.link.ProbitLink.rst  glimix_core.mean.LinearMean.rst  glimix_core.mean.OffsetMean.rst  glimix_core.mean.SumMean.rst
doc/lmm/: api.inc  impl.rst  intro.inc  scan.rst
glimix-core/: FETCH_HEAD  config  packed-refs
glimix_core/: __about__.py  __init__.py  _testit.py  check.py  io.py
glimix_core/_ep/: __init__.py  ep.py  linear_kernel.py  posterior.py  posterior_linear_kernel.py  site.py
glimix_core/_util/: __init__.py  _array.py  _assert.py  _numbers.py  _svd.py  cache.py  cached_property.py  check.py  eigen.py  format.py  hsolve.py  numbers.py  random.py  solve.py
glimix_core/cov/: __init__.py  _eye.py  _free.py  _given.py  _kron2sum.py  _linear.py  _lrfree.py  _sum.py  eye.py  free.py  given.py  kron2sum.py  linear.py  lrfree.py  sum.py
glimix_core/ep/: __init__.py  ep.py  ep_linear_kernel.py  linear_kernel.py  posterior.py  posterior_linear_kernel.py  site.py
glimix_core/example/: __init__.py
glimix_core/ggp/: __init__.py  _expfam.py  expfam.py
glimix_core/glmm/: __init__.py  _expfam.py  _glmm.py  _normal.py  expfam.py  glmm.py  glmm2.py  nglmm.py  normal.py
glimix_core/gp/: __init__.py  _gp.py  gp.py
glimix_core/lik/: __init__.py  _prod.py  prod.py
glimix_core/link/: __init__.py  _link.py  link.py
glimix_core/lmm/: __init__.py  _b.py  _core.py  _kron2sum.py  _kron2sum_scan.py  _kron_scan.py  _lmm.py  _lmm_core.py  _lmm_predict.py  _lmm_scan.py  _mt_core.py  _mt_lmm.py  _reml_kron2sum.py  _rkron2sum.py  _scan.py  core.py  lmm.py  scan.py
glimix_core/mean/: __init__.py  _kron.py  _linear.py  _offset.py  _sum.py  kron.py  linear.py  offset.py  sum.py
glimix_core/random/: __init__.py  _canonical.py  _ggp.py  _gp.py  canonical.py  ggp.py  gp.py
glimix_core/util/: __init__.py  _array.py  cache.py  check.py  classes.py  eigen.py  format.py  hsolve.py  io.py  normalise.py  npy_doctest.py  numbers.py
limix_inference/: __init__.py  _liknorm_build.py  fruits.py
limix_inference/_ep/: __init__.py  _ep.py  _expfam.py  _fixed.py
limix_inference/_fastlmm/: _fastlmm.py
limix_inference/_slowlmm/: _slowlmm.py
limix_inference/cov/: __init__.py  _eye.py  _free.py  _linear.py  _sum.py  eye.py  free.py  given.py  linear.py  sum.py
limix_inference/ep/: __init__.py  _conditioning.py  _ep.py  _expfam.py  _optimize.py  cavity.py  ep.py  expfam.py  fixed.py  posterior.py  single_expfam.py  site.py  util.py
limix_inference/example/: __init__.py
limix_inference/fastlmm/: _core.py
limix_inference/ggp/: __init__.py  expfam.py  ggp.py
limix_inference/glmm/: __init__.py  glmm.py
limix_inference/gp/: __init__.py  gp.py
limix_inference/inference/: fastlmm.py  fastlmm_core.py  slowlmm.py
limix_inference/lik/: __init__.py  _expfam.py  _prod.py  expfam.py  prod.py
limix_inference/liknorm/: __init__.py  _build.py  _machine.py
limix_inference/link/: __init__.py  _link.py  link.py
limix_inference/lmm/: __init__.py  core.py  lmm.py  scan.py
limix_inference/mean/: __init__.py  _kron.py  _linear.py  linear.py  offset.py  sum.py
limix_inference/random/: __init__.py  _canonical.py  _glmm.py  canonical.py  ggp.py  glmm.py  gp.py
limix_inference/slowlmm/: __init__.py
limix_inference/test/: test_binomial_data.py  test_fastlmm_core.py  test_liknorm.py  test_slowlmm.py
travis/: install_clang38.sh  install_liknorm.sh  install_llvmlite.sh
(+199 files in other folders)
