[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glimix-core"
version = "3.1.14"
description = "Fast inference over mean and covariance parameters for Generalised Linear Mixed Models"
authors = [{ name = "Danilo Horta", email = "danilo.horta@pm.me" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "glmm",
    "lmm",
]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "brent-search>=2.0.2,<3",
    "ndarray-listener>=2.0.2,<3",
    "numpy~=2.1",
    "numpy-sugar>=1.5.5,<2",
    "optimix>=3.0.6,<4",
    "scipy>=1.15.0,<2",
    "tqdm>=4.67.1,<5",
    "liknorm>=2.0.0,<3",
]

[project.urls]
Homepage = "https://github.com/limix/glimix-core"
Repository = "https://github.com/limix/glimix-core"

[dependency-groups]
dev = ["pytest>=8.3.4,<9"]
