[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Fast inference over mean and covariance parameters for Generalised Linear Mixed Models
download_url = https://github.com/limix/glimix-core
keywords = function, optimisation
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = glimix-core
url = https://github.com/limix/glimix-core
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=4.2
install_requires =
    brent-search>=1.0.32
    cachetools>=2.1.0
    liknorm>=1.1.1
    ndarray-listener>=1.1.1
    numpy-sugar>=1.2.5
    numpy>=1.14.5
    optimix>=1.2.23
    pandas>=0.23.1
    pytest>=3.6.1
    scipy-sugar>=1.0.7
    scipy>=1.1.0
    toolz>=0.9.0
    tqdm>=4.23.4

[aliases]
test = pytest

[tool:pytest]
addopts =
    -x
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
doctest_optionflags = ELLIPSIS
norecursedirs = .eggs .git *.egg-info build .ropeproject
pep8ignore = E402
