[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Fast inference over mean and covariance parameters for Generalised Linear Mixed Models
download_url = https://github.com/limix/glimix-core
keywords = function, optimisation
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = glimix-core
url = https://github.com/limix/glimix-core
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=4.2
install_requires =
    brent-search>=1.0.33
    cachetools>=2.1.0
    liknorm>=1.2.1
    ndarray-listener>=2.0.0
    numpy-sugar>=1.4.1
    numpy>=1.14.3
    optimix>=3.0.3
    pandas>=0.23.1
    pytest>=3.6.3
    pytest-doctestplus>=0.3.0
    scipy-sugar>=1.0.7
    scipy>=1.0.1
    tqdm>=4.23.4
    statsmodels>=0.9.0
    patsy

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-plus
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE FLOAT_CMP
doctest_plus_atol = 1e-03
doctest_plus_rtol = 1e-03
doctest_rst = enabled
norecursedirs = .eggs .git *.egg-info build .ropeproject .undodir
pep8ignore = E402 W0212 W0622 R0915

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88

[pylint]
disable = redefined-builtin,R0915

[flake8]
ignore = E501 E741 E203 W503 W0212 W0622 R0915

[rstcheck]
ignore_substitutions = today, version
ignore_directives = plot, autofunction, command-output, autmodule, automodule, autoclass, autoattribute, automethod, doctest
ignore_messages = Error in "math" directive
